--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
