--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "watch": "nodemon index.js",
-    "lint": "eslint .",    
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "keywords": [
     "blog",
@@ -18,12 +18,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.7.13",
     "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
+    "jest": "^24.9.0",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
