--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -4,9 +4,10 @@
   "description": "Blog database backend",
   "main": "index.js",
   "scripts": {
-    "watch": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "watch": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "keywords": [
     "blog",
@@ -15,18 +16,22 @@
   "author": "Zsolt Hajdu",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.7.13",
     "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
+    "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.1",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node"
