--- a/part5/package.json
+++ b/part5/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
     "prop-types": "^15.7.2",
@@ -36,6 +37,8 @@
   },
   "proxy": "http://localhost:3003",
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
     "eslint-plugin-jest": "^23.1.1"
   }
 }
