--- a/part8/library-frontend/package.json
+++ b/part8/library-frontend/package.json
@@ -8,7 +8,7 @@
     "react": "^16.8.6",
     "react-apollo": "^3.0.0-beta.2",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
