--- a/part7/bloglist-redux/package.json
+++ b/part7/bloglist-redux/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "eslint": "^6.7.2",
+    "axios": "^0.21.1",
+    "eslint": "^7.26.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -14,7 +14,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
@@ -24,8 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint .",
-    "cypress:open" : "cypress open"
+    "eslint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,7 +45,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
-    "cypress": "^3.8.1",
     "eslint-plugin-jest": "^23.1.1"
   }
 }
